# pokemon-scouting

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  manage.py  pyproject.toml  sample.env
conf/: __init__.py  _conf.py
docker/staging/: Dockerfile  docker-compose.yaml  staging.env  startup.sh
docker/testing/: Dockerfile  startup.sh
shared/: types.py  utils.py
src/app/: exceptions.py
src/app/ports/outbound/: data_fetching.py  database.py
src/app/ports/outbound/repos/: __init__.py  pokemons.py
src/app/services/: core.py
src/domain/models/: __init__.py  base.py  pokemons.py
src/infra/data_fetching/: __init__.py  adapter.py  base_backend.py  pokeapi_backend.py
src/infra/database/: adapter.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 2025_03_22_1359-c4606995635b_initial_migration.py
src/infra/http_client/: client.py  exceptions.py
src/infra/repositories/: pokemons.py
src/presentation/api/http/flask_/: asgi.py  handlers.py  middleware.py  routers.py
src/presentation/api/http/flask_/controllers/: utils.py
src/presentation/api/http/flask_/controllers/v1/: __init__.py  core.py
src/presentation/cli/: commands.py
tests/: conftest.py
tests/src/app/: conftest.py  test_exceptions.py
tests/src/app/services/: test_core.py
